Первый проект яндекс практикума, 08/01/2022, ГОТОВО!

--- a/index.html
+++ b/index.html
@@ -13,23 +13,22 @@
 <body>
   <div class="page">
     <header class="header">
-      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Лого Яндекс Практикум" /> 
+      <img class="logo logo_place_header" src="./images/logo_place_header.svg" alt="Лого Яндекс Практикум"> 
       <!--логотип-->
 
       <div class="header__title">
-        <h1 class="header__title_content">Научиться учиться</h1>
+        <h1 class="header__title-content">Научиться учиться</h1>
       </div>
       <!--заголовок-->
 
       <div class="header__subtitle">
-        <p class="header__subtitle_content">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
-          <a class="header__link_subtitle" href="#">Узнать 	&#8594</a>
+        <p class="header__subtitle-content">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? 
+          <a class="header__subtitle-link" href="#">Узнать 	&#8594;</a>
         </p>
       </div>
       <!-- подзаголовок-->
         
-      <div class="header__main-illustration" alt="Картина - Опять двойка">
-      </div>
+      <img class="header__main-illustration" src="./images/two_again.png" alt="Картина Решетникова- Опять двойка">
       <!-- картинка опять двойка-->
 
       <div class="header__square-pic">
@@ -37,7 +36,7 @@
       <!-- синий квадрат в шапке-->
     </header>
 
-
+    
     <main class="content">
       <!-- Проблемы в обучении - начало-->
       <section class="description">
@@ -49,15 +48,18 @@
             <p class="two-columns__paragraph"> <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
             </p>
            <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме. 
-           </p>      
+           </p>  
+          </div>    
+        </div>
+          </div>    
         </div>
       </section>
       <!-- Проблемы в обучении - конец-->
 
       <!--Таблица "Цифры и факты" - начало -->
       <section class="digits">
-        <h2 class="section__title">Цифры и факты</h2>
-        <p class="section__subtitle">Про учёбу и мозг</p>
+        <h2 class="section-title">Цифры и факты</h2>
+        <p class="section-subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
             <h3 class="table__heading">86 миллиардов</h3>
@@ -101,15 +103,15 @@
             <section class="feynman">
         <h2 class="feynman__title">Метод Фейнмана</h2>
         <p class="feynman__subtitle">Выучить и не забыть.</p>
-        <a class="feynman__link" href="#">Подробнее &#8594</a>
-        <img class="feynman__img-photo" src="./images/feynman.png" alt="Фейнман, фотография"/>
+        <a class="feynman__link" href="#">Подробнее &#8594;</a>
+        <img class="feynman__img-photo" src="./images/feynman.png" alt="Фотография Фейнмана">
       </section>
       <!-- Метод Фейнмана - конец -->
 
       <!-- Принципы от Джоша Кауфмана - начало -->
       <section class="kaufman">
-        <h2 class="section__title section-title_theme_dark">Принципы обучения</h2>
-        <p class="section__subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
             <h3 class="table__heading table__heading_theme_dark">1</h3>
@@ -152,7 +154,7 @@
             <p class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
           </li>
         </ul>
-        <div class="kaufman-triangle" alt="Картинка - треугольник"></div>
+        <img class="kaufman-triangle" src="./images/kaufman-triangle.svg" alt="Синий треугольник">
       </section>
     </main>
     <!-- Принципы от Джоша Кауфмана - конец -->
@@ -160,9 +162,9 @@
     <!-- Подвал-начало-->
     <footer class="footer">
       <div class="footer__columns">
-        <!--Колонка контент-копирайт - начало-->
+                <!--Колонка контент-копирайт - начало-->
         <div class="footer__column footer__column_content_copyright">
-          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="лого Яндекс Практикум"/>
+          <img class="logo logo_place_footer" src="./images/logo_place_footer.svg" alt="лого Яндекс Практикум">
           <p class="footer__author">&copy; Илья Клементьев</p>
         </div>
         <!--Колонка контент-копирайт - конец-->
@@ -183,13 +185,13 @@
           <h3 class="footer__column-heading">Соцсети</h3>
           <nav class="footer__column-links">
             <a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="YouTube"/>YouTube
+              <img class="footer__social-icon" src="./images/youtube-icon.svg" alt="YouTube">YouTube
             </a>
             <a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте"/>ВКонтакте
+              <img class="footer__social-icon" src="./images/vk_color_white.svg" alt="ВКонтакте">ВКонтакте
             </a>
             <a class="footer__column-link" href="#">
-              <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="ТикТок"/>TikTok
+              <img class="footer__social-icon" src="./images/tiktok-icon.svg" alt="ТикТок">TikTok
             </a>
           </nav>
         </div>
